# sinix-rs

./: Cargo.toml  README.md
src/: db.rs  event_handlers.rs  game.rs  lib.rs  models.rs
src/channel/: handler.rs  mod.rs
