[package]
name = "sinix"
description = "Official Crate for Sinix"
homepage = "https://sinix.dev"
repository = "https://github.com/sinix-dev/sinix-rs"
version = "0.1.0"
authors = ["Sanket Chaudhari <chaudharisanket2000@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = "0.9"
pickledb = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
