[package]
name = "sinix"
description = "Official Crate for Sinix"
homepage = "https://sinix.dev"
repository = "https://github.com/sinix-dev/sinix-rs"
version = "0.1.0"
authors = ["Sanket Chaudhari <chaudharisanket2000@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
dirs = "3.0"
warp = "0.2"
tauri = "0.9"
pickledb = "0.4"
actix-rt = "1.1"
actix-web = "2.0"
env_logger = "0.7"
actix-files = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
futures = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["macros", "sync"] }
